rename and restructure

--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -6,13 +6,14 @@
     <title>Title</title>
 </head>
 <body>
-    <form action="/student/getInfor/" method="post">
+    <form enctype="multipart/form-data" action="/student/update/" method="post">
         stu_id: <input name="stu_id" type="text"/><br>
-           psw: <input name="psw" type="text"/><br>
+           psw: <input name="pwd" type="text"/><br>
         stu_name: <input name="stu_name" type="text" /><br>
         stu_tel: <input name="stu_tel" type="tel" /><br>
         stu_mail: <input name="stu_mail" type="email"/><br>
         stu_school: <input name="stu_school" type="text" /><br>
+        avatar: <input name="stu_avatar" type="file" name="select"/>
         <input type="submit" value="提交" />
 
 
