fix_useless_files

--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -6,9 +6,11 @@
     <title>Title</title>
 </head>
 <body>
-    <form enctype="multipart/form-data" action="/student/update/" method="post">
+    <form enctype="multipart/form-data" action="/student/info/" method="post">
+        account: <input name="account" type="text"/><br>
+        credential：<input name="credential" type="text"/><br>
         stu_id: <input name="stu_id" type="text"/><br>
-           psw: <input name="pwd" type="text"/><br>
+           pwd: <input name="pwd" type="text"/><br>
         stu_name: <input name="stu_name" type="text" /><br>
         stu_tel: <input name="stu_tel" type="tel" /><br>
         stu_mail: <input name="stu_mail" type="email"/><br>
