bugfix team_info team_invite

--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -16,7 +16,7 @@
         stu_mail: <input name="stu_mail" type="email"/><br>
         stu_school: <input name="stu_school" type="text" /><br>
         avatar: <input name="stu_avatar" type="file" name="select"/>
-        <input type="submit" value="提交" />
+        <input type="submit" value="提交" /></form>
 
 
 </body>
