--- a/templates/team/fetch.html
+++ b/templates/team/fetch.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <!--这个p由后端渲染，包含了hash_tid，提交新密码时将其作为凭证-->
-<p id="hash_tid" class="visibility: hidden">{{ hash_tid }}</p>
-<p id="mail" class="visibility: hidden">{{ mail }}</p>
+<p id="hash_tid" style="display: none">{{ hash_tid }}</p>
+<p id="mail" style="display: none">{{ mail }}</p>
 <!--修改密码的其他代码-->
 </body>
 </html>
