--- a/templates/team/test.html
+++ b/templates/team/test.html
@@ -11,5 +11,28 @@
 <body>
 <p>验证码(鼠标点击灰色区域生成):</p>
 <img id="check"/>
+<br/>
+<form action="http://127.0.0.1:8000/team/register/" method="post">
+    mail: <input name="mail" type="text"/><br>
+    pwd: <input name="pwd" type="text"/><br>
+    inv: <input name="inv_code" type="text"/><br>
+    code: <input name="code" type="text"/><br>
+
+    <input type="submit" value="提交"/></form>
+<form action="http://127.0.0.1:8000/team/login/" method="post">
+    mail: <input name="mail" type="text"/><br>
+    pwd: <input name="pwd" type="text"/><br>
+    code: <input name="code" type="text"/><br>
+
+    <input type="submit" value="提交"/></form>
+<form action="http://127.0.0.1:8000/team/reset/" method="post">
+    mail: <input name="mail" type="text"/><br/>
+
+    <input type="submit" value="提交"/></form>
+<form action="http://127.0.0.1:8000/team/update_pwd/" method="post">
+    mail: <input name="mail" type="text"/><br/>
+    pwd: <input name="pwd" type="text"/><br/>
+    key: <input name="key" type="text"/><br/>
+    <input type="submit" value="提交"/></form>
 </body>
 </html>
