--- a/templates/team/test.html
+++ b/templates/team/test.html
@@ -12,6 +12,7 @@
 <p>验证码(鼠标点击灰色区域生成):</p>
 <img id="check"/>
 <br/>
+<p>register</p>
 <form action="http://0.0.0.0:8081/team/register/" method="post">
     mail: <input name="mail" type="text"/><br>
     pwd: <input name="pwd" type="text"/><br>
@@ -19,16 +20,19 @@
     code: <input name="code" type="text"/><br>
 
     <input type="submit" value="提交"/></form>
+<p>login</p>
 <form action="http://0.0.0.0:8081/team/login/" method="post">
     mail: <input name="mail" type="text"/><br>
     pwd: <input name="pwd" type="text"/><br>
     code: <input name="code" type="text"/><br>
 
     <input type="submit" value="提交"/></form>
+<p>reset</p>
 <form action="http://0.0.0.0:8081/team/reset/" method="post">
     mail: <input name="mail" type="text"/><br/>
 
     <input type="submit" value="提交"/></form>
+<p>updatea_pwd</p>
 <form action="http://0.0.0.0:8081/team/update_pwd/" method="post">
     mail: <input name="mail" type="text"/><br/>
     pwd: <input name="pwd" type="text"/><br/>
