fix url， test form for local

--- a/templates/team/test.html
+++ b/templates/team/test.html
@@ -38,5 +38,34 @@
     pwd: <input name="pwd" type="text"/><br/>
     key: <input name="key" type="text"/><br/>
     <input type="submit" value="提交"/></form>
+<p>========================================================</p>
+<p>local</p>
+<p>========================================================</p>
+<p>register</p>
+<form action="http://127.0.0.1:8000/team/register/" method="post">
+    mail: <input name="mail" type="text"/><br>
+    pwd: <input name="pwd" type="text"/><br>
+    inv: <input name="inv_code" type="text"/><br>
+    code: <input name="code" type="text"/><br>
+
+    <input type="submit" value="提交"/></form>
+<p>login</p>
+<form action="http://127.0.0.1:8000/team/login/" method="post">
+    mail: <input name="mail" type="text"/><br>
+    pwd: <input name="pwd" type="text"/><br>
+    code: <input name="code" type="text"/><br>
+
+    <input type="submit" value="提交"/></form>
+<p>reset</p>
+<form action="http://127.0.0.1:8000/team/reset/" method="post">
+    mail: <input name="mail" type="text"/><br/>
+
+    <input type="submit" value="提交"/></form>
+<p>updatea_pwd</p>
+<form action="http://127.0.0.1:8000/team/update_pwd/" method="post">
+    mail: <input name="mail" type="text"/><br/>
+    pwd: <input name="pwd" type="text"/><br/>
+    key: <input name="key" type="text"/><br/>
+    <input type="submit" value="提交"/></form>
 </body>
 </html>
