--- a/templates/team/test.html
+++ b/templates/team/test.html
@@ -41,6 +41,9 @@
 <p>========================================================</p>
 <p>local</p>
 <p>========================================================</p>
+<p>验证码(鼠标点击灰色区域生成):</p>
+<img id="check2"/>
+<br/>
 <p>register</p>
 <form action="http://127.0.0.1:8000/team/register/" method="post">
     mail: <input name="mail" type="text"/><br>
