--- a/team/static/css/main/find_return.css
+++ b/team/static/css/main/find_return.css
@@ -5,7 +5,7 @@
     font-family: "Roboto", sans-serif;
 }
 html{
-    background-image: url(../../res/imgs/bg.svg);
+    background-image: url(../../img/bg.svg);
     background-size: 100% auto;
 }
 
