--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -6,15 +6,18 @@
     <title>Title</title>
 </head>
 <body>
-    <form enctype="multipart/form-data" action="/student/resume/upload/" method="post">
+    <form enctype="multipart/form-data" action="/student/resume/apply/" method="post">
         account: <input name="account" type="text"/><br>
         credential：<input name="credential" type="text"/><br>
-        stu_id: <input name="id" type="text"/><br>
+        id: <input name="id" type="text"/><br>
            pwd: <input name="pwd" type="text"/><br>
         stu_name: <input name="stu_name" type="text" /><br>
         stu_tel: <input name="stu_tel" type="tel" /><br>
         stu_mail: <input name="stu_mail" type="email"/><br>
         stu_school: <input name="stu_school" type="text" /><br>
+        job_id: <input name="job_id" type="text" /><br>
+        resume_path: <input name="resume_path" type="text" /><br>
+        stu_id: <input name="stu_id" type="text" /><br>
         avatar: <input name="avatar" type="file" name="select"/><br>
         resume: <input name="resume" type="file" name="select"/>
         <input type="submit" value="提交" /></form>
