--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -6,18 +6,27 @@
     <title>Title</title>
 </head>
 <body>
-    <form enctype="multipart/form-data" action="/student/resume/apply/" method="post">
+    <form enctype="multipart/form-data" action="/student/info/intern/get/" method="post">
         account: <input name="account" type="text"/><br>
         credential：<input name="credential" type="text"/><br>
         id: <input name="id" type="text"/><br>
            pwd: <input name="pwd" type="text"/><br>
-        stu_name: <input name="stu_name" type="text" /><br>
-        stu_tel: <input name="stu_tel" type="tel" /><br>
-        stu_mail: <input name="stu_mail" type="email"/><br>
+        name: <input name="name" type="text" /><br>
+        tel: <input name="tel" type="tel" /><br>
+        mail: <input name="mail" type="email"/><br>
         stu_school: <input name="stu_school" type="text" /><br>
         job_id: <input name="job_id" type="text" /><br>
         resume_path: <input name="resume_path" type="text" /><br>
+        major: <input name="major" type="text" /><br>
+        graduation_year: <input name="graduation_year" type="text" /><br>
+        edu_background: <input name="edu_background" type="text" /><br>
+        school: <input name="school" type="text" /><br>
         stu_id: <input name="stu_id" type="text" /><br>
+        sex: <input name="sex" type="text" /><br>
+        year: <input name="year" type="text" /><br>
+        month: <input name="month" type="text" /><br>
+        location: <input name="location" type="text" /><br>
+        path: <input name="path" type="text" /><br>
         avatar: <input name="avatar" type="file" name="select"/><br>
         resume: <input name="resume" type="file" name="select"/>
         <input type="submit" value="提交" /></form>
