--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form enctype="multipart/form-data" action="/student/info/intern/get/" method="post">
+    <form enctype="multipart/form-data" action="/student/info/edu/update/" method="post">
         account: <input name="account" type="text"/><br>
         credential：<input name="credential" type="text"/><br>
         id: <input name="id" type="text"/><br>
@@ -22,6 +22,7 @@
         edu_background: <input name="edu_background" type="text" /><br>
         school: <input name="school" type="text" /><br>
         stu_id: <input name="stu_id" type="text" /><br>
+        edu_id: <input name="edu_id" type="text" /><br>
         sex: <input name="sex" type="text" /><br>
         year: <input name="year" type="text" /><br>
         month: <input name="month" type="text" /><br>
