--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form enctype="multipart/form-data" action="/student/info/edu/update/" method="post">
+    <form enctype="multipart/form-data" action="/student/info/intern/add/" method="post">
         account: <input name="account" type="text"/><br>
         credential：<input name="credential" type="text"/><br>
         id: <input name="id" type="text"/><br>
@@ -28,6 +28,11 @@
         month: <input name="month" type="text" /><br>
         location: <input name="location" type="text" /><br>
         path: <input name="path" type="text" /><br>
+        company: <input name="company" type="text" /><br>
+        position: <input name="position" type="text" /><br>
+        begin_time: <input name="begin_time" type="text" /><br>
+        end_time: <input name="end_time" type="text" /><br>
+        description: <input name="description" type="text" /><br>
         avatar: <input name="avatar" type="file" name="select"/><br>
         resume: <input name="resume" type="file" name="select"/>
         <input type="submit" value="提交" /></form>
