--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form enctype="multipart/form-data" action="/student/info/intern/add/" method="post">
+    <form enctype="multipart/form-data" action="/student/info/proj/add/" method="post">
         account: <input name="account" type="text"/><br>
         credential：<input name="credential" type="text"/><br>
         id: <input name="id" type="text"/><br>
@@ -23,6 +23,7 @@
         school: <input name="school" type="text" /><br>
         stu_id: <input name="stu_id" type="text" /><br>
         edu_id: <input name="edu_id" type="text" /><br>
+        intern_id: <input name="intern_id" type="text" /><br>
         sex: <input name="sex" type="text" /><br>
         year: <input name="year" type="text" /><br>
         month: <input name="month" type="text" /><br>
@@ -32,6 +33,10 @@
         position: <input name="position" type="text" /><br>
         begin_time: <input name="begin_time" type="text" /><br>
         end_time: <input name="end_time" type="text" /><br>
+        description: <input name="description" type="text" /><br>
+        name: <input name="name" type="text" /><br>
+        duty: <input name="duty" type="text" /><br>
+        year: <input name="year" type="text" /><br>
         description: <input name="description" type="text" /><br>
         avatar: <input name="avatar" type="file" name="select"/><br>
         resume: <input name="resume" type="file" name="select"/>
