--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form enctype="multipart/form-data" action="/student/info/proj/update/" method="post">
+    <form enctype="multipart/form-data" action="/student/info/skill/add/" method="post">
         account: <input name="account" type="text"/><br>
         credential：<input name="credential" type="text"/><br>
         id: <input name="id" type="text"/><br>
@@ -25,6 +25,7 @@
         edu_id: <input name="edu_id" type="text" /><br>
         intern_id: <input name="intern_id" type="text" /><br>
         proj_id: <input name="proj_id" type="text" /><br>
+        skill_id: <input name="skill_id" type="text" /><br>
         sex: <input name="sex" type="text" /><br>
         year: <input name="year" type="text" /><br>
         month: <input name="month" type="text" /><br>
@@ -38,6 +39,8 @@
         name: <input name="name" type="text" /><br>
         duty: <input name="duty" type="text" /><br>
         year: <input name="year" type="text" /><br>
+        name: <input name="name" type="text" /><br>
+        value: <input name="value" type="text" /><br>
         description: <input name="description" type="text" /><br>
         avatar: <input name="avatar" type="file" name="select"/><br>
         resume: <input name="resume" type="file" name="select"/>
