--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form enctype="multipart/form-data" action="/student/info/skill/add/" method="post">
+    <form enctype="multipart/form-data" action="/student/info/works/upload/" method="post">
         account: <input name="account" type="text"/><br>
         credential：<input name="credential" type="text"/><br>
         id: <input name="id" type="text"/><br>
@@ -43,7 +43,8 @@
         value: <input name="value" type="text" /><br>
         description: <input name="description" type="text" /><br>
         avatar: <input name="avatar" type="file" name="select"/><br>
-        resume: <input name="resume" type="file" name="select"/>
+        resume: <input name="resume" type="file" name="select"/><br>
+        works: <input name="works" type="file" name="select"/>
         <input type="submit" value="提交" /></form>
 
 
