--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form enctype="multipart/form-data" action="/student/info/works/upload/" method="post">
+    <form enctype="multipart/form-data" action="/student/info/works/add/" method="post">
         account: <input name="account" type="text"/><br>
         credential：<input name="credential" type="text"/><br>
         id: <input name="id" type="text"/><br>
@@ -42,6 +42,9 @@
         name: <input name="name" type="text" /><br>
         value: <input name="value" type="text" /><br>
         description: <input name="description" type="text" /><br>
+        path: <input name="path" type="text" /><br>
+        site: <input name="site" type="text" /><br>
+
         avatar: <input name="avatar" type="file" name="select"/><br>
         resume: <input name="resume" type="file" name="select"/><br>
         works: <input name="works" type="file" name="select"/>
