--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form enctype="multipart/form-data" action="/student/info/works/add/" method="post">
+    <form enctype="multipart/form-data" action="/student/info/works/update/" method="post">
         account: <input name="account" type="text"/><br>
         credential：<input name="credential" type="text"/><br>
         id: <input name="id" type="text"/><br>
@@ -26,6 +26,7 @@
         intern_id: <input name="intern_id" type="text" /><br>
         proj_id: <input name="proj_id" type="text" /><br>
         skill_id: <input name="skill_id" type="text" /><br>
+        works_id: <input name="works_id" type="text" /><br>
         sex: <input name="sex" type="text" /><br>
         year: <input name="year" type="text" /><br>
         month: <input name="month" type="text" /><br>
