--- a/templates/team/test.html
+++ b/templates/team/test.html
@@ -20,6 +20,15 @@
     code: <input name="code" type="text"/><br>
 
     <input type="submit" value="提交"/></form>
+
+<p>register - ajax</p>
+    mail: <input name="mail" id="r_mail" type="text"/><br>
+    pwd: <input name="pwd" id="r_pwd" type="text"/><br>
+    inv: <input name="inv_code" id="r_inv" type="text"/><br>
+    code: <input name="code" type="text" id="r_code"/><br>
+
+    <button id="reg_btn">OK</button>
+
 <p>login</p>
 <form action="http://110.64.69.66:8081/team/login/" method="post">
     mail: <input name="mail" type="text"/><br>
