--- a/student/templates/POST.html
+++ b/student/templates/POST.html
@@ -6,11 +6,12 @@
     <title>Title</title>
 </head>
 <body>
-    <form enctype="multipart/form-data" action="/student/info/works/update/" method="post">
+    <form enctype="multipart/form-data" action="/team/apply/mail/" method="post">
         account: <input name="account" type="text"/><br>
         credential：<input name="credential" type="text"/><br>
         id: <input name="id" type="text"/><br>
            pwd: <input name="pwd" type="text"/><br>
+           code: <input name="code" type="text"/><br>
         name: <input name="name" type="text" /><br>
         tel: <input name="tel" type="tel" /><br>
         mail: <input name="mail" type="email"/><br>
@@ -22,11 +23,15 @@
         edu_background: <input name="edu_background" type="text" /><br>
         school: <input name="school" type="text" /><br>
         stu_id: <input name="stu_id" type="text" /><br>
+        team_id: <input name="team_id" type="text" /><br>
         edu_id: <input name="edu_id" type="text" /><br>
         intern_id: <input name="intern_id" type="text" /><br>
         proj_id: <input name="proj_id" type="text" /><br>
         skill_id: <input name="skill_id" type="text" /><br>
         works_id: <input name="works_id" type="text" /><br>
+        apply_id: <input name="apply_id" type="text" /><br>
+        apply_list: <input name="apply_list[]" type="text" /><br>
+        apply_list: <input name="apply_list[]" type="text" /><br>
         sex: <input name="sex" type="text" /><br>
         year: <input name="year" type="text" /><br>
         month: <input name="month" type="text" /><br>
@@ -45,6 +50,8 @@
         description: <input name="description" type="text" /><br>
         path: <input name="path" type="text" /><br>
         site: <input name="site" type="text" /><br>
+        state: <input name="state" type="text" /><br>
+        text: <input name="text" type="text" /><br>
 
         avatar: <input name="avatar" type="file" name="select"/><br>
         resume: <input name="resume" type="file" name="select"/><br>
