--- a/templates/team/test.html
+++ b/templates/team/test.html
@@ -12,8 +12,15 @@
 <p>验证码(鼠标点击灰色区域生成):</p>
 <img id="check"/>
 <br/>
+<p>search</p>
+<form action="http://110.64.69.101:8081/team/search/" method="post">
+    model: <input name="model" type="text"/><br>
+    type: <input name="type" type="text"/><br>
+    keys: <input name="keys" type="text"/><br>
+
+    <input type="submit" value="提交"/></form>
 <p>register</p>
-<form action="http://110.64.69.66:8081/team/register/" method="post">
+<form action="http://110.64.69.101:8081/team/register/" method="post">
     mail: <input name="mail" type="text"/><br>
     pwd: <input name="pwd" type="text"/><br>
     inv: <input name="inv_code" type="text"/><br>
@@ -30,25 +37,25 @@
     <button id="reg_btn">OK</button>
 
 <p>login</p>
-<form action="http://110.64.69.66:8081/team/login/" method="post">
+<form action="http://110.64.69.101:8081/team/login/" method="post">
     mail: <input name="mail" type="text"/><br>
     pwd: <input name="pwd" type="text"/><br>
     code: <input name="code" type="text"/><br>
 
     <input type="submit" value="提交"/></form>
 <p>reset</p>
-<form action="http://110.64.69.66:8081/team/reset/" method="post">
+<form action="http://110.64.69.101:8081/team/reset/" method="post">
     mail: <input name="mail" type="text"/><br/>
 
     <input type="submit" value="提交"/></form>
 <p>updatea_pwd</p>
-<form action="http://110.64.69.66:8081/team/update_pwd/" method="post">
+<form action="http://110.64.69.101:8081/team/update_pwd/" method="post">
     mail: <input name="mail" type="text"/><br/>
     pwd: <input name="pwd" type="text"/><br/>
     key: <input name="key" type="text"/><br/>
     <input type="submit" value="提交"/></form>
 <p>update_team_info</p>
-<form action="http://110.64.69.66:8081/team/update_team_info/" method="post">
+<form action="http://110.64.69.101:8081/team/update_team_info/" method="post">
     tid: <input name="tid" type="text"/><br/>
     name: <input name="name" type="text"/><br/>
     logo_path: <input name="logo_path" type="text"/><br/>
@@ -58,54 +65,54 @@
     b_type: <input name="b_type" type="text"/><br/>
     <input type="submit" value="提交"/></form>
 <p>add_team_label</p>
-<form action="http://110.64.69.66:8081/team/add_team_label/" method="post">
+<form action="http://110.64.69.101:8081/team/add_team_label/" method="post">
     tid: <input name="tid" type="text"/><br/>
     name: <input name="name" type="text"/><br/>
     <input type="submit" value="提交"/></form>
 <p>rm_team_label</p>
-<form action="http://110.64.69.66:8081/team/rm_team_label/" method="post">
+<form action="http://110.64.69.101:8081/team/rm_team_label/" method="post">
     tid: <input name="tid" type="text"/><br/>
     lid: <input name="lid" type="text"/><br/>
     <input type="submit" value="提交"/></form>
 <p>add_team_stu</p>
-<form action="http://110.64.69.66:8081/team/add_team_stu/" method="post">
+<form action="http://110.64.69.101:8081/team/add_team_stu/" method="post">
     tid: <input name="tid" type="text"/><br/>
     sid: <input name="sid" type="text"/><br/>
     <input type="submit" value="提交"/></form>
 <p>rm_team_stu</p>
-<form action="http://110.64.69.66:8081/team/rm_team_stu/" method="post">
+<form action="http://110.64.69.101:8081/team/rm_team_stu/" method="post">
     tid: <input name="tid" type="text"/><br/>
     sid: <input name="sid" type="text"/><br/>
     <input type="submit" value="提交"/></form>
 <p>name2mail</p>
-<form action="http://110.64.69.66:8081/team/rm_team_stu/" method="post">
+<form action="http://110.64.69.101:8081/team/rm_team_stu/" method="post">
     tid: <input name="tid" type="text"/><br/>
     sid: <input name="sid" type="text"/><br/>
     <input type="submit" value="提交"/></form>
 <p>invite_stu</p>
-<form action="http://110.64.69.66:8081/team/invite_stu/" method="post">
+<form action="http://110.64.69.101:8081/team/invite_stu/" method="post">
     tid: <input name="tid" type="text"/><br/>
     mail: <input name="mail" type="text"/><br/>
     <input type="submit" value="提交"/></form>
 <p>update_team_contact</p>
-<form action="http://110.64.69.66:8081/team/update_team_contact/" method="post">
+<form action="http://110.64.69.101:8081/team/update_team_contact/" method="post">
     tid: <input name="tid" type="text"/><br/>
     tel: <input name="tel" type="text"/><br/>
     mail: <input name="mail" type="text"/><br/>
     <input type="submit" value="提交"/></form>
 <p>add_team_photo</p>
-<form enctype="multipart/form-data" action="http://110.64.69.66:8081/team/add_team_photo/" method="post">
+<form enctype="multipart/form-data" action="http://110.64.69.101:8081/team/add_team_photo/" method="post">
     tid: <input name="tid" type="text"/><br/>
     img: <input name="photo" type="file"/><br/>
     <input type="submit" value="提交"/></form>
 
 <p>upload_logo</p>
-<form enctype="multipart/form-data" action="http://110.64.69.66:8081/team/upload_logo/" method="post">
+<form enctype="multipart/form-data" action="http://110.64.69.101:8081/team/upload_logo/" method="post">
     img: <input name="photo" type="file"/><br/>
     <input type="submit" value="提交"/></form>
 
 <p>rm_team_photo</p>
-<form action="http://110.64.69.66:8081/team/rm_team_photo/" method="post">
+<form action="http://110.64.69.101:8081/team/rm_team_photo/" method="post">
     tid: <input name="tid" type="text"/><br/>
     img_id: <input name="img_id" type="text"/><br/>
     <input type="submit" value="提交"/></form>
