move for new server

--- a/templates/stu/act_succ.html
+++ b/templates/stu/act_succ.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="row center center-align" style="margin: 100px auto;">
-<a class="waves-effect waves-light btn-large amber darken-3" href="http://110.64.69.66:8080/main/role/login.html">激活成功，点此登录</a>
+<a class="waves-effect waves-light btn-large amber darken-3" href="http://wemeet.tech:8080/main/role/login.html">激活成功，点此登录</a>
 </div>
 </body>
 </html>
